Perform miscellaneous cleanup from bugs and other potential problems found by FindBugs
- A couple of cases in which it was possible to reference a variable before it
  had been initialized.

- Several cases of unnecessary or inefficient type conversion (e.g., calling
  String.toString() or new String(String), or calling new Long(long) instead of
  Long.valueOf(long)).

- Several cases of code that was either unused or could not possibly be
  reached.

- One case in which an error message was created but not added to an operation
  response, and a case in which an exception was created but never thrown.

- Renaming a method in the replication code from "NewChangeNumber()" to
  "newChangeNumber()", since method names should start with a lowercase letter.